# nccn-watcher

./: .gitignore  CLAUDE.md  README.md  TODOS.md  config.example.yaml  pyproject.toml
openclaw-plugin/: index.ts
openclaw-plugin/src/: mcp-bridge.ts
src/nccn_monitor/: __init__.py  analyzer.py  downloader.py  guideline_names.py  scraper.py  server.py  state.py
src/nccn_watcher/: downloader.py  health.py  scraper.py  server.py  state.py
tests/: integration_test.py  test_archive.py  test_health.py  test_scraper.py  test_state.py
tests/fixtures/: detail_page.html  recently_published.html
