[project]
name = "nccn-monitor"
version = "0.1.0"
description = "NCCN Guidelines update monitor - MCP Server for OpenClaw"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.0",
    "pypdf>=5.8.0",
    "pyyaml>=6.0.2",
    "mcp[cli]>=1.11.0",
    "brotli>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nccn_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Exclude integration tests (they need live NCCN access + credentials)
addopts = "--ignore=tests/integration_test.py"
